feat: scoring and sort with it